--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -2,14 +2,14 @@
 Controller Data:<%= @controllerMessage%><br>
 <br>
 <% if false %>
-<%= link_to 'Add new User', :controller => :user, :action => :new %>
+<%= link_to 'Add new User', new_user_path %>
 <% end %>
 <br><br>
 <% if false%>
 <% hello = "world" %>
-<%= localvariable%>
+<%= localvariable %>
  <% end %>
-<%= form_for :nil, :url => :user_new do |f|%>
+<%= form_for :nil, url: new_user_path , :method => :get do |f|%>
 <%= f.submit "Add User"%>
 <% end %>
 <h1>The User records are </h1>
@@ -32,7 +32,10 @@ Controller Data:<%= @controllerMessage%><br>
 	 <td><%= user.active %></td>
 	 <td><%= user.phone_no%></td>
 	 <td><%= user.mobile_no%></td>
- </tr>
+	 <td><%= link_to 'Show', user_path(user)%></td>
+	 <td><%= link_to 'Edit', edit_user_path(user)%></td>
+	 <td><%= link_to 'Delete', user_path(user), :method => :delete %></td>
+</tr>
  <% end %>
  </table>
 
