--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,13 +1,13 @@
 <h1>Add new User</h1><br><br>
-<% if @users.errors.any?%>
-<h2><%= @users.errors.count %></h2>
+<% if @user.errors.any? %>
+<h2><%= @user.errors.count %></h2>
 <ul>
-<%= @users.errors.full_messages.each do |error| %>
+<%= @user.errors.full_messages.each do |error| %>
 <li><%= error %></li>
 <% end %>
 </ul>
 <% end %>
-<%= form_for :user, :url => :user  do |f|%> <br><br>
+<%= form_for :user, :url => user_index_path do |f|%> <br><br>
  First Name: <%= f.text_field :first_name%><br><br>
   Last Name: <%= f.text_field :last_name%><br><br>
       Email: <%= f.text_field :email%><br><br>
@@ -18,4 +18,4 @@
      <%= f.submit "Save"%>
  <% end %>
 
- 
+
