--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,11 +1,10 @@
-<h1>The details of<%= " " + @user.first_name + @user.last_name + " "%> are</h1>
+<h1>The details of<%= " " + @user.first_name + " "+ @user.last_name + " "%> are</h1>
 First Name: <%=  @user.first_name %><br>
-Last Name:<%=  @user.email %><br>
+Last Name:<%=  @user.last_name %><br>
+Email:<%=  @user.email %><br>
 D.O.B:<%= @user.date_of_birth %><br>
-<% if @user.active == true %>
-Active: Yes<br>
-<% else %>
 Active: No<br>
-<% end %>
 Phone No:<%= @user.phone_no %><br>
 Mobile No:<%= @user.mobile_no %><br>
+
+<%= button_to 'Navigate to Home', user_index_path, :method => :get%></td>
