--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -1,5 +1,6 @@
 <h2>Users List</h2>
- <table id = "table">
+
+ <table class = "table">
   <tr>
     <th>First Name</th>
     <th>Last  Name</th>
@@ -10,7 +11,8 @@
      <th>Mobile no</th>
      <th>User Operations</th>
   </tr>
- <% @users.each do |user|%>
+
+<% @users.each do |user|%>
  <tr>
    <td><%= user.first_name%></td>
    <td><%= user.last_name%></td>
@@ -26,3 +28,8 @@
 </tr>
  <% end %>
  </table>
+
+
+
+
+
