--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,3 +1,4 @@
-<%= form_tag(user_path(@user),:method => :put, :class => "user_edit_info") do%>
+
+<%= form_tag(user_path,:method => :put, :class => "edit_info") do%>
 <%= render 'users/form'%>
 <% end %>
