--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -1,15 +1,19 @@
 <h2>Users List</h2>
 
- <table class = "table">
+<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<%= javascript_include_tag 'user'%>
+<%= javascript_include_tag 'jquery'%>
+<body>
+ <table class = "table"> 
   <tr>
     <th>First Name</th>
     <th>Last  Name</th>
-     <th>Email</th>
-     <th>D.O.B</th>
-     <th>Active</th>
-     <th>Phone no</th>
-     <th>Mobile no</th>
-     <th>User Operations</th>
+    <th>Email</th>
+    <th>D.O.B</th>
+    <th>Active</th>
+    <th>Phone no</th>
+    <th>Mobile no</th>
+    <th>User Operations</th>
   </tr>
 
 <% @users.each do |user|%>
@@ -21,13 +25,16 @@
    <td><%= user.active %></td>
    <td><%= user.phone_no%></td>
    <td><%= user.mobile_no%></td>
-   <td><%= button_to 'Show', user_path(user), :method => :get%>
-       <%= button_to 'Edit', edit_user_path(user), :method => :get%>
-       <%= button_to 'Delete', user_path(user),:method => :delete %>
+   <td><%= link_to 'Show', user_path(user), method: :get, :class => 'show_button'%>
+       <%= link_to 'Edit', edit_user_path(user), method:  :get, :class => 'edit_button' %>
+       <%= link_to 'Delete', user_path(user),method: :delete, :class => 'delete_button' %>
    </td>
 </tr>
  <% end %>
  </table>
+ 
+
+ </body>
 
 
 
