--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,14 +9,14 @@
   </ul>
 <% end  %>
 <%= f.label 'First Name:' %>
-<%= f.text_field :first_name %><br><br>
+<%= f.text_field :first_name , :id =>'first_name' %><br><br>
 
 
 <%= f.label 'Last Name:' %>
-<%= f.text_field :last_name %><br><br>
+<%= f.text_field :last_name, :id => 'last_name' %><br><br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= f.label 'Email:' %>
-<%= f.text_field :email %><br><br>
+<%= f.text_field :email, :id => 'email' %><br><br>
 
 &nbsp;<%= f.label 'Birth Date:' %>
 <%= f.text_field :date_of_birth %><br><br>
@@ -27,5 +27,5 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= f.label 'Mobile:' %>
 <%= f.text_field :mobile_no %><br><br>
 <%= f.submit 'Save Info', :id => 'form_submit'%><br><br>
-<%= link_to 'Close Dialog',users_path,:method => 'get', :class => 'close'%>
+<%= link_to 'Close',users_path,:method => 'get', :class => 'close'%>
 <% end %>
