--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,14 @@
 <!-- Displays the user's information using erb template engine in the HTML page-->
 
 <h1>The details of<%= " " + @user.first_name + " "+ @user.last_name + " "%> are</h1>
-First Name: <%=  @user.first_name %><br>
-Last Name:<%=  @user.last_name %><br>
-Email:<%=  @user.email %><br>
-D.O.B:<%= @user.date_of_birth %><br>
-Active: No<br>
-Phone No:<%= @user.phone_no %><br>
-Mobile No:<%= @user.mobile_no %><br>
 
-<%= button_to 'Navigate to Home', users_path, :method => :get%></td>
+<ul id = "unordered">
+<li>First Name: <%=  @user.first_name %></li><br>
+<li>Last Name:  <%=  @user.last_name %></li><br>
+<li>Email:  <%=  @user.email %></li><br>
+<li>D.O.B:<%= @user.date_of_birth %></li><br>
+<li>Active: No</li><br>
+<li>Phone No:<%= @user.phone_no %></li><br>
+<li>Mobile No:<%= @user.mobile_no %></li><br>
+</ul>
+<%= button_to 'Close', users_path, :method => :get%></td>
