--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -73,9 +73,9 @@ h1{
     border-radius: none;
     box-shadow: none;
  }
- #list{
+ #unordered{
   list-style-type: none;
  }
- #list_item{
-  list-style-type: none;
- }
+ 
+
+
