Client side validation has been carried out.

--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,4 +1,5 @@
-
+<!-- Edit partial that renders the form partial displaying the user information 
+and allows for editing the user's info and updating the same.-->
 <%= form_tag(user_path,:method => :put, :class => "edit_info") do%>
 <%= render 'users/form'%>
 <% end %>
