--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,4 +1,5 @@
-
+<!-- New partial that renders the form partial for adding a new  user and 
+saving the same in the database on the successful validation of user credentials .-->
 <%= form_tag(users_path,:method => :post, :class => "user_info") do%>
 <%= render 'users/form'%>
 <% end %>
