--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-
+<!-- The index page of this user apllication which displays all the user 
+	along with their details in table format by rendering table partial .Also it allows to add/edit/show/delete a user.-->
 <h1>Hello!</h1>
 <% if false %>
 Controller Data:<%= @controllerMessage%>
@@ -22,7 +23,6 @@ Controller Data:<%= @controllerMessage%>
 <button id = "button">Add new user</button>
 <dialog id = "dialog">
 </dialog>
-
 
 
 <%# The following code represents the table which lists all
